@@ -177,6 +177,10 @@ compiler.
 \#
 \# Variables specific to either the C or the C++ compiler.
 \#
+.Ss Toolchain.CC.IsAvaiable
+Expands to
+.Em yes
+if the C compiler is available.
 .Ss Toolchain.CC.ImageFormat
 Identifier or the application image format generated by the C
 compiler. Refer to the documentation of
@@ -216,6 +220,10 @@ Expands to
 .Em yes ,
 if the selected C compiler is the
 .Em Tiny C Compiler .
+.Ss Toolchain.CXX.IsAvaiable
+Expands to
+.Em yes
+if the C++ compiler is available.
 .Ss Toolchain.CXX.ImageFormat
 Identifier or the application image format generated by the C++ compiler.
 .Pp
